# dftracer

./: .gitignore  .gitmodules  .gitpod.yml  .trace-0-of-2.pfw  CITATION.cff  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-publish.yml
CMake/: Findlibuv.cmake  dlio_profiler-config-version.cmake.in  dlio_profiler-config.cmake.build.in  dlio_profiler-config.cmake.install.in
cmake/configure_files/: dftracer-config-version.cmake.in  dftracer-config.cmake.build.in  dftracer-config.cmake.install.in  dftracer_config.hpp.in  dftracer_module.lua.in  dlio_profiler-config-version.cmake.in  dlio_profiler-config.cmake.build.in  dlio_profiler-config.cmake.install.in  dlio_profiler_config.hpp.in  dlio_profiler_module.lua.in
cmake/modules/: FindHWLOC.cmake  SetupCompiler.cmake  dftracer-utils.cmake  dlio_profiler-utils.cmake
cmake/tests/: has_fd.cpp  has_filesystem.cpp
dependency/: CMakeLists.txt  cpp.requirements.txt  install_dependency.sh  spack.yaml
dfanalyzer/: graph.py  main.py  plots.ipynb  plots.py  test.pfw  test.pfw.gz.zindex
dfanalyzer/dask/conf/: configuration.sh  configuration.yaml  corona.yaml  install_dask_env.sh  polaris.yaml  quartz.yaml  ruby.yaml
dfanalyzer/dask/scripts/: start_dask_distributed.sh  start_dask_worker.sh  stop_dask_distributed.sh
dfanalyzer/graph_visualization/: cystyles.json  cytoscape.py  plots.py
dftracer/: logger.py
dftracer_dbg/: logger.py
dlio_profiler/: logger.py
dlp_analyzer/: darshan-requirements.txt  main.py  plots.ipynb  plots.py  requirements.txt  test.pfw
dlp_analyzer/dask/conf/: configuration.sh  configuration.yaml  corona.yaml  install_dask_env.sh  ruby.yaml
dlp_analyzer/dask/scripts/: start_dask_distributed.sh  start_dask_worker.sh  stop_dask_distributed.sh  utils.sh
docker/: Dockerfile  dl.Dockerfile  gitpod.Dockerfile  ior.Dockerfile
docs/: Makefile  api.rst  bash_utilities.rst  build.rst  building_applications.rst  conf.py  definitions.rst  developer-guide.rst  dfanalyzer.rst  dfanalyzer_alcf_polaris.rst  dfanalyzer_build.rst  dfanalyzer_conf.rst  dfanalyzer_custom_columns.rst  dfanalyzer_distributed.rst  dfanalyzer_overlap_analysis.rst  examples.rst  index.rst  limitations.rst  migration.rst  overview.rst  pegasus_genome.rst  pegasus_montage.rst  pegasus_workflows.rst  perfetto.rst  requirements.txt  style-guides.rst  testing.rst  trace_format.rst  utilities.rst
examples/dfanalyzer/: dfanalyzer-distributed.ipynb  dfanalyzer.ipynb
examples/dfanalyzer/test-trace-distributed/: test-trace-dist-5.pfw.gz.zindex
examples/dlp_analyzer/: dlp_analyzer.ipynb  requirements.txt
examples/graph_visualization/: README.md  example.ipynb  requirement.txt  test_data1.pfw
include/dftracer/: dftracer.h
include/dftracer/core/: constants.h  typedef.h
include/dlio_profiler/: dlio_profiler.h  dlio_profiler_py.cpp  macro.h
include/dlio_profiler/core/: constants.h  dlio_profiler_main.h  enumeration.h  error.h  macro.h  singleton.h  typedef.h
script/: dftracer_anonymize  dftracer_compact  dftracer_compact.sh  dftracer_create_index  dftracer_event_count  dftracer_merge  dftracer_sanitize  dftracer_split  dftracer_validate  merge_pfw.sh
src/dftracer/: df_logger.cpp  df_logger.h  dftracer.cpp  dftracer_preload.cpp  dftracer_preload.h  pydftracer.cpp  pydftracer.cpp.in  pydftracer_dbg.cpp
src/dftracer/brahma/: posix.cpp  posix.h  stdio.cpp  stdio.h
src/dftracer/core/: dftracer_main.cpp  dftracer_main.h  enumeration.h  error.h  logging.h  macro.h  singleton.h
src/dftracer/finstrument/: functions.cpp  functions.h
src/dftracer/utils/: configuration_manager.cpp  configuration_manager.h  md5.cpp  md5.h  posix_internal.cpp  posix_internal.h  utils.cpp  utils.h
src/dftracer/writer/: chrome_writer.cpp  chrome_writer.h
src/dlio_profiler/: dlio_logger.cpp  dlio_logger.h  dlio_profiler.cpp  dlio_profiler_preload.cpp  dlio_profiler_preload.h  dlio_profiler_py.cpp
src/dlio_profiler/brahma/: posix.cpp  posix.h  stdio.cpp  stdio.h
src/dlio_profiler/core/: common.h  constants.h  dlio_profiler_main.cpp  dlio_profiler_main.h  enumeration.h  error.h  macro.h  singleton.h  typedef.h
src/dlio_profiler/utils/: configuration_manager.cpp  configuration_manager.h  posix_internal.cpp  posix_internal.h  utils.cpp  utils.h
src/dlio_profiler/writer/: base_writer.h  chrome_writer.cpp  chrome_writer.h
test/: CMakeLists.txt  check_file.sh  check_file_at_least.sh  check_file_not.sh  test.cpp  test.py  util.h
test/c/: test.c
test/cpp/: test.cpp
test/dfanalyzer/: CMakeLists.txt
test/dlio_benchmark/: CMakeLists.txt
test/dlp_analyzer/: CMakeLists.txt
test/libuv/: CMakeLists.txt  main.cpp
test/paper/: CMakeLists.txt  load_darshan.py  load_recorder.py  load_scorep.py  overhead.cpp  overhead.py
test/paper/analysis/: darshan_analyzer_main.ipynb  otf2_distributed_reader.ipynb  recorder_distributed_reader.ipynb
test/py/: python_test.py  requirements.txt  test.py  test_named_parameters.py
test/unit/: mmap  mmap.cpp
test/yaml/: conf.yaml
